# agentic-protein-reconstruction

./: .gitignore  CLAUDE.md  README.md  config.py  config.yaml  fasta_test.py  main.py  mlm_bert.ipynb  pyproject.toml  requirements.txt  test.py
agentic/: reconstruct_gpt.ipynb  reconstruct_prot_bert.ipynb
agentic_protein_reconstruction.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
agents/: baseline_policy.py  deterministic_agent.py  iterative_runner.py  react_agent.py
algorithms/: beam_order.py  greedy_order.py  overlap_graph.py  score_junctions.py  score_validity.py  trypsin_filter.py
evaluation/: agentic.py  junction_ranking.py  metrics.py  pdf_report.py  pipeline.py  reporting.py  runner.py  sample_worker.py  sequential.py  sweep.py  sweep_pdf.py  sweep_report.py
experiments/: calculator.ipynb  esm_fold.ipynb  mlm_bert.ipynb  prot_bert.ipynb  reconstruct_esm.ipynb  reconstruct_gpt.ipynb  uniprot_fasta.ipynb
models/: esm.py  esm_validity.py  memory.py  prot.py  prot_bert.py
preprocessing/: filter.ipynb  fragment.ipynb  preprocessing.py  split.ipynb  tangle.ipynb
report/: bare_jrnl.tex  references.bib
tools/: beam_search.py  junction_scorer.py  overlap_graph.py  reconstruction_tool.py  sample_utils.py  trypsin_filter.py  validity_scorer.py
