[project]
name = "agentic-protein-reconstruction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate==1.12.0",
    "biopython==1.86",
    "ipykernel==7.2.0",
    "langchain==1.3.1",
    "langchain-openai==1.2.2",
    "langgraph==1.2.1",
    "notebook==7.5.3",
    "openai==2.38.0",
    "python-dotenv==1.2.2",
    "sympy==1.13.3",
    "torch==2.10.0",
    "transformers==5.2.0",
]
